#
# Copyright 2015-2018 Yubico AB
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[package]
name = "yubihsmrs"
version = "2.1.0"
authors = ["Alessio Di Mauro <alessio@yubico.com>"]
description = "Rust wrapper library for libyubihsm"
keywords = ["yubico", "hsm", "ffi"]
license = "Apache-2.0"

[lib]
name = "yubihsmrs"

[features]
buildlib = ["libyubihsm-sys/buildlib"]

[dependencies]
lazy_static = "0.2.8"
log = "0.3.8"
regex = "0.2.2"
rustc-serialize = "0.3.24"

[dev-dependencies]
base64 = "0.7.0"

[dependencies.libyubihsm-sys]
path = "libyubihsm-sys"
version = "2.0.0"
