#
# Copyright 2015-2018 Yubico AB
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[package]
name = "libyubihsm-sys"
version = "2.0.0"
authors = ["Alessio Di Mauro <alessio@yubico.com>"]
description = "Native bindings to libyubihsm"
license = "Apache-2.0"
links = "libyubihsm"
build = "build.rs"
keywords = ["yubico", "hsm", "ffi"]
categories = ["external-ffi-bindings"]

[features]
default = ["pkg-config"]
buildlib = ["cmake"]

[dependencies]
num_enum = "0.5.6"

[build-dependencies]
cmake = {version = "0.1.48", optional = true}
pkg-config = {version = "0.3.24", optional = true}
